<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginVertical="@dimen/layout_margin_vertical_details"
    tools:context="ui.DetailsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding_details"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/ivAvatarDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:src="@tools:sample/avatars"
            android:padding="@dimen/iv_padding"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_blog_txt"
            android:textAlignment="center"
            android:textSize="@dimen/title_txt_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvBlogDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/tv_blog_tools_txt"
            android:textAlignment="center"
            android:textSize="@dimen/details_txt_size"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="20sp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_type_text"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/title_txt_size" />

        <TextView
            android:id="@+id/tvTypeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/tv_type_tools_text"
            android:textAlignment="center"
            android:textSize="@dimen/details_txt_size"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_summary_text"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/title_txt_size" />

        <TextView
            android:id="@+id/tvSummaryDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/tv_summary_tools_text"
            android:textAlignment="center"
            android:textSize="@dimen/details_txt_size"
            android:lines="4"
            android:maxLines="4"
            />

    </LinearLayout>


</LinearLayout>